kubernetes/StudyDocs/ingress/haproxy-ingress/src/haproxy-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-controller
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    run: haproxy-ingress
  name: haproxy-ingress
  namespace: ingress-controller
spec:
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      run: haproxy-ingress
  template:
    metadata:
      labels:
        run: haproxy-ingress
    spec:
      hostNetwork: true
      nodeSelector:
        role: ingress-controller
      serviceAccountName: ingress-controller
      containers:
        - name: haproxy-ingress
          image: quay.io/jcmoraisjr/haproxy-ingress:v0.10
          imagePullPolicy: IfNotPresent
          args:
            - --configmap=ingress-controller/haproxy-ingress
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: stat
              containerPort: 1936
            - name: ingress-stats
              containerPort: 10254
            - name: prometheus-port
              containerPort: 9105
          livenessProbe:
            httpGet:
              path: /healthz
              port: 10253
      tolerations:
        - operator: Exists
