kubernetes/StudyDocs/ingress/haproxy-ingress/src/bluegreen-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bluegreen
  name: bluegreen
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    run: bluegreen
